# RosDronePassivityBasedControlExample

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: controller_param.yaml  drone.rviz  drone_param.yaml  plotJugglerConfig.xml
launch/: controller.launch  eta_reference.launch  inner_loop.launch  octomap_server.launch  odometry.launch  outer_loop.launch  plot_juggler.launch  start.launch  start_lee_controller.launch  start_odometry.launch  start_spawn_mav.launch  test_controller_node.launch  test_odometry_node.launch
msg/: DesiredAttritude.msg  DesiredTrajectory.msg  LogData.msg  UavState.msg
quad_control/: CMakeLists.txt  package.xml
quad_control/config/: controller_param.yaml  drone_param.yaml  plotJugglerConfig.xml
quad_control/launch/: start.launch
quad_control/msg/: State.msg
quad_control/src/Nodes/: inner_loop_node.cpp  outer_loop_node.cpp  trajectory_node.cpp
quad_control/src/Utils/: utility.cpp  utility.hpp
quad_control/worlds/column/: model.sdf
rotors_description/urdf/: component_snippets.xacro
src/ControllerNode/: Controller.cpp  Controller.hpp  startControllerNode.cpp
src/Nodes/: estimator_node.cpp  eta_reference_node.cpp  inner_loop_node.cpp  odometry_node.cpp  outer_loop_node.cpp  startOdometryNode.cpp  startOuterLoopControllerNode.cpp  trajectory_node.cpp
src/Utils/: Differentiator.hpp  utility.cpp  utility.hpp
src/Utils/Drone/: Drone.cpp  Drone.hpp
src/Utils/Filter/: Differentiator.cpp  Filter.hpp  LP2Filter.cpp  WrenchEstimator.cpp  WrenchEstimator.hpp
src/Utils/Utility/: utility.cpp  utility.hpp
worlds/: arena.world  arena_with_columns.world  basic.world
